--- a/configs/config.yml
+++ b/configs/config.yml
@@ -1,4 +1,4 @@
-token: "qDoy0VWAB7GxRZor"    # lichess OAuth2 Token
+token: "x"    # lichess OAuth2 Token
 url: "https://lichess.org/"  # lichess base URL
 good_luck_messages: # messages sent to chat when game begins
   - "good luck"
