--- a/config.yml
+++ b/config.yml
@@ -6,7 +6,7 @@ engine:                      # engine settings
   name: "stockfish"        # binary name of the engine to use
   protocol: "uci"            # "uci" or "xboard"
   polyglot:
-    enabled: false           # activate polyglot book
+    enabled: true           # activate polyglot book
     book: 
       - "engines/books/Book.bin"
       - "engines/books/codekiddy.bin"
@@ -20,12 +20,12 @@ engine:                      # engine settings
       - "engines/books/KomodoVariety.bin"
       - "engines/books/Performance.bin"
       - "engines/books/varied.bin"
-    max_depth: 30             # half move max depth
+    max_depth: 8             # half move max depth
     min_weight: 1            # selects move with highest weight but not below this value
     selection: "best_move"
   uci_options:               # arbitrary UCI options passed to the engine
     Move Overhead: 700       # increase if your bot flags games too often
-    Threads: 4               # max CPU threads the engine can use
+    Threads: 8               # max CPU threads the engine can use
 #    Hash: 256                # max memory (in megabytes) the engine can allocate
 #   go_commands:             # additional options to pass to the UCI go command
 #      nodes: 1               # Search so many nodes only.
