--- a/configs/bullet.yml
+++ b/configs/bullet.yml
@@ -11,14 +11,15 @@ engine:                      # engine settings
 
   polyglot:
     enabled: false           # activate polyglot book
-    books:standard: "engines/books/Performance.bin"                   # books
-    max_depth: 32             # half move max depth
+    books:standard: "engines/books/Performance.bin" #books
+    max_depth: 8             # half move max depth
     min_weight: 3             # selects move with highest weight but not below this value
     random: true             # selects move randomly; otherwise select the best but not below the min_weight
   uci_options:               # arbitrary UCI options passed to the engine
     Move Overhead: 1000       # increase if your bot flags games too often
-    Threads: 6               # max CPU threads the engine can use
+    Threads: 8               # max CPU threads the engine can use
     Hash: 256                # max memory (in megabytes) the engine can allocate
+    Contempt: 100
 # xboard_options:            # arbitrary xboard options passed to the engine
 #   cores: "4"
 #   memory: "4096"
@@ -34,7 +35,7 @@ engine:                      # engine settings
 #   tempdecay: 15            # ?
 #   noise: true              # ?
   silence_stderr: false      # some engines (yes you, leela) are very noisy
-  multipv : 500 
+  multipv : 100 
 max_concurrent_games: 1      # number of games to play simultaneously
 abort_time: 20               # time to abort a game in seconds when there is no activity
 
@@ -53,7 +54,7 @@ challenge:                   # incoming challenges
 #   - racingKings
 #   - threeCheck
   time_controls:             # time controls to accept
-    - ultraBullet
+#   - ultraBullet
     - bullet
 #   - blitz
 #   - rapid
