--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-certifi==2018.11.29
+certifi==2018.1.18
 chardet==3.0.4
-idna==2.8
-python-chess==0.24.1
-PyYAML>=3.13
-requests>=2.21.0
-urllib3==1.24.1
-backoff==1.7.1
+future==0.16.0
+futures==3.1.1
+idna==2.6
+python-chess==0.23.3
+PyYAML==3.12
+requests==2.18.4
+urllib3==1.22
+backoff==1.5.0
+python-decouple==3.1
